# rust.rs

./: .gitignore  README.md  file_store.md  package-lock.json  package.json
src/: index.html  main.js  steam_login.html  styles.css
src-side-cars/: pair_listener.py  requirements.txt
src-tauri/: Cargo.toml  build.rs  pyinstaller-sidecar.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  http_server.rs  main.rs  storage.rs  util.rs
src-tauri/src/rust_plus/: listen.rs  mod.rs  pair_listen.rs
src/control_panel/: index.html  styles.css
src/test/: index.html  main.js
