[package]
name = "rustrs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# UI
tauri-build = { version = "1.2", features = [] }

# Rust +
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"

# Side-car
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }

# Util
anyhow = "1.0.70"


[dependencies]
# UI & Networking
tauri = { version = "1.2", features = ["notification", "process-command-api", "reqwest-client", "shell-open", "shell-sidecar", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Steam Login Gathering
crossbeam-channel = "0.5.8"
hyper = {version = "0.14.0", features = ["full"] }

# Networking & Rust+
tokio = { version = "1.27.0", features = ["full"] }
reqwest = {version = "0.11.16", features = ["json"] }
uuid = "1.3.1"
protobuf = "3.2.0"
tungstenite = {version = "0.19.0", features= ["native-tls"] }
fcm = "0.9.2"

# Config management
toml = "0.7.3"
lazy_static = "1.4.0"
anyhow = "1.0.70"
image = "0.24.6"
rusttype = "0.9.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
